[hotfix] resolve error while read test xml on jar file